--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,25 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://fonts.cdnfonts.com/css/starnext" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/nau-sea" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/americorps" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/messe-muenchen"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/my-puma-oblique-outlined"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap"
+      rel="stylesheet"
+    />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
