--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,21 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.cdnfonts.com/css/starnext" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/nau-sea" rel="stylesheet" />
+    <!-- <link href="https://fonts.cdnfonts.com/css/nau-sea" rel="stylesheet" /> -->
     <link href="https://fonts.cdnfonts.com/css/americorps" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       href="https://fonts.cdnfonts.com/css/messe-muenchen"
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet" />
-    <link
+    <!-- <link
       href="https://fonts.cdnfonts.com/css/my-puma-oblique-outlined"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
